FIX Retain text colour of btn-links on focus/hover in dark mode

--- a/client/src/styles/mfa.scss
+++ b/client/src/styles/mfa.scss
@@ -44,4 +44,20 @@
   label {
     font-weight: normal;
   }
+
+  pre {
+    color: var(--color-text);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .btn-secondary,
+    .btn-link {
+      color: var(--color-text);
+    }
+
+    .btn-link:focus,
+    .btn-link:hover {
+      color: var(--color-text);
+    }
+  }
 }
